--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,8 @@ header .topbar .main-menu ul li a .logo {
 
 /* Stilizzazione hero */
 header .hero {
-    height: 630px;
     background-color: #B4D0E7;
     padding-top: 60px;
-}
-header .hero h1 {
-    margin-bottom: 30px;
 }
 header .hero p {
     font-weight: 400;
@@ -110,4 +106,9 @@ header .hero .trial {
 }
 header .hero .fa-arrow-down {
     font-size: 35px;
+    margin-bottom: 100px;
+}
+header .hero .row {
+    position: relative;
+    top: 70px;
 }
