Aggiunta sezione partner

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@ body {
 .w-20 {
     width: 20%;
 }
+.w-25 {
+    width: 25%;
+}
+.w-30 {
+    width: 30%;
+}
 .w-33 {
     width: calc(100% / 3);
 }
@@ -31,6 +37,15 @@ body {
 .w-60 {
     width: 60%;
 }
+.w-70 {
+    width: 70%;
+}
+.w-75 {
+    width: 75%;
+}
+.w-80 {
+    width: 80%;
+}
 .w-100 {
     width: 100%;
 }
@@ -42,6 +57,9 @@ body {
 }
 .text-white {
     color: white;
+}
+.text-black {
+    color: black;
 }
 .size-12 {
     font-size: 12px;
@@ -57,6 +75,15 @@ body {
 }
 .bg-blue {
     background-color: #0061FF;
+}
+.bg-white {
+    background-color: white;
+}
+.btn.bg-white {
+    border: 1px solid black;
+}
+.btn.bg-white:hover {
+    background-color: #f5f5f5;
 }
 .btn.bg-blue:hover {
     background-color: #3783ff;
@@ -118,8 +145,14 @@ header {
 }
 header .topbar {
     height: 70px;
+    width: 100%;
+    background-color: white;
     font-weight: 400;
     padding: 0 25px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 header .topbar ul {
     list-style-type: none;
@@ -128,23 +161,29 @@ header .topbar ul {
 header .topbar ul li {
     line-height: 70px;
     display: inline;
-    margin-right: 20px;
 }
 header .topbar ul li a {
     color: black;
+    display: inline-block;
+    height: 100%;
+    padding: 0 20px;
     text-decoration: none;
 }
 header .topbar ul li a:hover {
-    text-decoration: underline;
+    border-bottom: 2px solid black;
 }
 header .topbar .main-menu ul li a .logo {
     vertical-align: text-bottom;
+}
+header .topbar .main-menu ul li.home a:hover {
+    border-bottom: none;
 }
 
 /* Stilizzazione hero */
 header .hero {
     background-color: #B4D0E7;
     padding-top: 60px;
+    margin-top: 70px;
 }
 header .hero p {
     font-weight: 400;
@@ -163,6 +202,9 @@ header .hero .row {
 }
 
 /* Stilizzazione main */
+main .plans {
+margin-bottom: 150px;
+}
 main .plans .radio {
     display: inline-block;
     margin-right: 20px;
@@ -181,8 +223,10 @@ main .plans .columns .col.center {
 main .plans .columns .col.right {
     padding-left: 40px;
 }
-main .plans .columns .col .contain {
+main .plans .contain {
     border: 1px solid #d0d0d3;
+}
+main .plans .col .contain  {
     height: 900px;
 }
 main .plans .plan-target {
@@ -195,6 +239,10 @@ main .plans .plan-info {
 main .plans .plan-info .plan-overview .frequency {
     color: #637381;
 }
+main .plans .plan-info .plan-overview .benefit { 
+    padding-left: 1.5em;
+    text-indent: -0.7em;
+}
 main .plans .plan-info .plan-overview .buy-now a {
     color: #0061FF;
 }
@@ -203,4 +251,17 @@ main .plans .plan-info .plan-details ul {
 }
 main .plans .plan-info .plan-details ul li i {
     color: #0061FF;
+}
+main .plans .plan-info .plan-details li { 
+    padding-left: 1.5em;
+    text-indent: -0.7em;
+}
+main .partner .partner-for-you img {
+    width: 100%;
+}
+main .partner .partner-for-you .col.right {
+    padding-left: 50px;
+}
+main .partner .partner-for-you .col.right p {
+    line-height: 175%;
 }
