--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ main .features {
     margin-bottom: 170px;
 }
 main .clients .client {
-    height: 230px;
+    height: 15vw;
     position: relative;
 }
 main .clients .client.one {
@@ -365,7 +365,7 @@ main .clients .client.eight:hover {
     border: 10px solid #FFEC97;
 }
 main .clients .client img {
-    width: 120px;
+    width: 8vw;                
     position: absolute;
     top: 50%;
     left: 50%;
@@ -376,7 +376,7 @@ main .clients .client img {
     padding: 50px;
 }
 .clients .col.center img {
-    width: 130px;
+    width: 35%;
 }
 .clients .col.center hr {
     width: 50px;
